--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <script src="https://d3js.org/d3.v6.min.js"></script>
 
+<header>Testing</header>
+
 <script>
   console.log(d3); // test if d3 is loaded
   // Add an SVG
