--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script src="https://d3js.org/d3.v6.min.js"></script>
 
-<header>Testing</header>
+<header>Luke's Assignemnt 1 Data Vis</header>
 
 <script>
   console.log(d3); // test if d3 is loaded
@@ -10,3 +10,13 @@
   // Add Lines
   // Add Polygons
 </script>
+
+<body>
+  <div id = "svgcontainer">
+    <svg width="50" height="50">
+      <line x1 = "100" y1 = "100" 
+                x2 = "200" y2 = "200" style = "stroke:rgb(255,0,0);
+                stroke-width:2"/>
+    </svg>
+  </div>
+</body>
