--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
 
 <script>
   console.log(d3); // test if d3 is loaded
+
+  var w = 960,
+    h = 500,
+    z = 20,
+    x = w / z,
+    y = h / z;
+
+var svg = d3.select("body").append("svg")
+    .attr("width", w)
+    .attr("height", h);
+    
   // Add an SVG
   // Add Rectangles
   // Add Circles
   // Add Lines
   // Add Polygons
 </script>
-
-<body>
-  <div id = "svgcontainer">
-    <svg width="50" height="50">
-      <line x1 = "100" y1 = "100" 
-                x2 = "200" y2 = "200" style = "stroke:rgb(255,0,0);
-                stroke-width:2"/>
-    </svg>
-  </div>
-</body>
