--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 
 <header>Luke's Assignemnt 1 Data Vis</header>
 
+<style>
+    body {
+    margin: 0;
+  }
+
+  rect {
+    stroke: #fff;
+    stroke-width: .1px;
+  }
+</style>
+
 <script>
   console.log(d3); // test if d3 is loaded
 
@@ -14,7 +25,7 @@
 var svg = d3.select("body").append("svg")
     .attr("width", w)
     .attr("height", h);
-    
+
   // Add an SVG
   // Add Rectangles
   // Add Circles
