--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
   }
 
   rect {
-    stroke: rgb(255, 0, 0);
+    stroke: rgb(39, 107, 196);
     stroke-width: 20px;
     fill: none
   }
 
   circle {
     fill: none;
-    stroke: rgb(0, 255, 200);
+    stroke: plum;
     stroke-width: 2.5px;
   }
 
   line {
-    stroke: lightgreen;
+    stroke: seagreen;
     stroke-width: 10px;
   }
 </style>
@@ -41,7 +41,17 @@
   svg.append("rect")
     .attr("width", w)
     .attr("height", h)
-   
+  
+  svg.append("rect")
+    .attr("width", w/2)
+    .attr("height", h/2)
+
+  svg.append("rect")
+    .attr("width", w/2)
+    .attr("height", h/2)
+    .attr("x", w/2)
+    .attr("y", h/2)
+
   svg.append("circle")
     .attr("cx", w/2)
     .attr("cy", h/2)
@@ -52,6 +62,12 @@
     .attr("x2", w)
     .attr("y1", 0)
     .attr("y2", h)
+
+  svg.append("line")
+    .attr("x1", w)
+    .attr("x2", 0)
+    .attr("y1", h)
+    .attr("y2", 0)
   // Add an SVG
   // Add Rectangles
   // Add Circles
