--- a/index.html
+++ b/index.html
@@ -51,11 +51,15 @@
     .attr("height", h/2)
     .attr("x", w/2)
     .attr("y", h/2)
+    .style("stroke-width", 2)
+    .style("stroke", rgb(0,0,0))
 
   svg.append("circle")
-    .attr("cx", w/2)
-    .attr("cy", h/2)
+    .attr("cx", w/2 + w/4)
+    .attr("cy", h/2 + h/4)
     .attr("r", 50)
+    .style("fill", red)
+    .style("stroke", red)
 
   svg.append("line")
     .attr("x1", 0)
@@ -63,11 +67,6 @@
     .attr("y1", 0)
     .attr("y2", h)
 
-  svg.append("line")
-    .attr("x1", w)
-    .attr("x2", 0)
-    .attr("y1", h)
-    .attr("y2", 0)
   // Add an SVG
   // Add Rectangles
   // Add Circles
