--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
     .attr("x", w/2)
     .attr("y", h/2)
     .style("stroke-width", 2)
-    .style("stroke", rgb(0,0,0))
+    .style("stroke", "black")
 
   svg.append("circle")
     .attr("cx", w/2 + w/4)
     .attr("cy", h/2 + h/4)
     .attr("r", 50)
-    .style("fill", red)
-    .style("stroke", red)
+    .style("fill", "red")
+    .style("stroke", "red")
 
   svg.append("line")
     .attr("x1", 0)
