--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
     x = w / z,
     y = h / z;
 
+  var points1 = [
+    [w/4, h/4],
+    [w/6, h/6],
+    [w/4 + w/6, h/4 + h/6]
+  ];
+
   var svg = d3.select("body").append("svg")
     .attr("width", w)
     .attr("height", h);
@@ -66,6 +72,12 @@
     .attr("x2", w)
     .attr("y1", 0)
     .attr("y2", h)
+
+  svg.append("polygon")
+    .attr("points", points1)
+    .attr("fill", "none")
+    .attr("stroke", "blue")
+    .attr("stroke-width", 4)
 
   // Add an SVG
   // Add Rectangles
