--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
     stroke: seagreen;
     stroke-width: 10px;
   }
+
+  polygon {
+    fill: none;
+    stroke: blue;
+    stroke-width: 4px;
+  }
 </style>
 
 <script>
@@ -35,10 +41,16 @@
     y = h / z;
 
   var points1 = [
-    [50, 50],
-    [75, 75],
-    [25, 25]
+    [w/4, h/6 - 10],
+    [w/6, h/4],
+    [w/3, h/4]
   ];
+
+  var points2 = [
+    [w/4, h/4 + 10],
+    [w/6, h/6],
+    [w/3, h/6]
+  ]
 
   var svg = d3.select("body").append("svg")
     .attr("width", w)
@@ -69,10 +81,11 @@
     .style("stroke", "red")
 
   svg.append("polygon")
-    .attr("points", "50,50 25,25 75,75")
-    .attr("fill", "none")
-    .attr("stroke", "blue")
-    .attr("stroke-width", 4)
+    .attr("points", points1)
+
+  svg.append("polygon")
+    .attr("points", points2)
+    
 
   // Add an SVG
   // Add Rectangles
