--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
     y = h / z;
 
   var points1 = [
-    [w/4, h/6 - 10],
-    [w/6, h/4],
-    [w/3, h/4]
+    [w/4, h/6 - 30],
+    [w/6, h/3],
+    [w/3, h/3]
   ];
 
   var points2 = [
-    [w/4, h/4 + 10],
+    [w/4, h/3 + 30],
     [w/6, h/6],
     [w/3, h/6]
   ]
@@ -61,10 +61,32 @@
     .attr("height", h)
     .attr("stroke-width", 4)
   
+  //Israel
+  svg.append("polygon")
+    .attr("points", points1)
+
+  svg.append("polygon")
+    .attr("points", points2)
+
   svg.append("rect")
     .attr("width", w/2)
     .attr("height", h/2)
 
+  svg.append("rect")
+    .attr("width", w/2)
+    .attr("height", h/12)
+    .attr("y", 20)
+    .style("fill", "blue")
+    .style("stroke-width", 0)
+
+  svg.append("rect")
+    .attr("width", w/2)
+    .attr("height", h/12)
+    .attr("y", 210)
+    .style("fill", "blue")
+    .style("stroke-width", 0)
+
+  //Japan
   svg.append("rect")
     .attr("width", w/2)
     .attr("height", h/2)
@@ -79,12 +101,6 @@
     .attr("r", 50)
     .style("fill", "red")
     .style("stroke", "red")
-
-  svg.append("polygon")
-    .attr("points", points1)
-
-  svg.append("polygon")
-    .attr("points", points2)
     
 
   // Add an SVG
