--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
   polygon {
     fill: none;
-    stroke: blue;
-    stroke-width: 4px;
+    stroke: darkblue;
+    stroke-width: 6px;
   }
 </style>
 
@@ -41,15 +41,15 @@
     y = h / z;
 
   var points1 = [
-    [w/4, h/6 - 30],
-    [w/6, h/3],
-    [w/3, h/3]
+    [w/4, h/6],
+    [w/6 + 20, h/3 - 20],
+    [w/3 - 20, h/3 - 20]
   ];
 
   var points2 = [
-    [w/4, h/3 + 30],
-    [w/6, h/6],
-    [w/3, h/6]
+    [w/4, h/3],
+    [w/6 + 20, h/6 + 20],
+    [w/3 - 20, h/6 + 20]
   ]
 
   var svg = d3.select("body").append("svg")
@@ -74,16 +74,16 @@
 
   svg.append("rect")
     .attr("width", w/2)
-    .attr("height", h/12)
+    .attr("height", h/14)
     .attr("y", 20)
-    .style("fill", "blue")
+    .style("fill", "darkblue")
     .style("stroke-width", 0)
 
   svg.append("rect")
     .attr("width", w/2)
-    .attr("height", h/12)
-    .attr("y", 210)
-    .style("fill", "blue")
+    .attr("height", h/14)
+    .attr("y", 185)
+    .style("fill", "darkblue")
     .style("stroke-width", 0)
 
   //Japan
