--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   }
 
   line {
-    stroke: seagreen;
-    stroke-width: 10px;
+    stroke: yellow;
+    stroke-width: 45px;
   }
 
   polygon {
@@ -42,14 +42,14 @@
 
   var points1 = [
     [w/4, h/6],
-    [w/6 + 20, h/3 - 20],
-    [w/3 - 20, h/3 - 20]
+    [w/6 + 35, h/3 - 20],
+    [w/3 - 35, h/3 - 20]
   ];
 
   var points2 = [
     [w/4, h/3],
-    [w/6 + 20, h/6 + 20],
-    [w/3 - 20, h/6 + 20]
+    [w/6 + 35, h/6 + 20],
+    [w/3 - 35, h/6 + 20]
   ]
 
   var svg = d3.select("body").append("svg")
@@ -102,6 +102,25 @@
     .style("fill", "red")
     .style("stroke", "red")
     
+
+  //Sweeden
+  svg.append("rect")
+    .attr("x", w/2)
+    .attr("y", 0)
+    .attr("width", w/2)
+    .attr("height", h/2)
+    .attr("fill", "lightskyblue")
+    .attr("stroke-width", 0)
+    
+  svg.append("line")
+    .attr("x1", w/2)
+    .attr("x2", w)
+    .attr("y1", h/4)
+
+  svg.append("line")
+    .attr("x1", w/2 + 100)
+    .attr("y1", 0)
+    .attr("y2", h/2)
 
   // Add an SVG
   // Add Rectangles
