--- a/index.html
+++ b/index.html
@@ -116,9 +116,11 @@
     .attr("x1", w/2)
     .attr("x2", w)
     .attr("y1", h/4)
+    .attr("y2", h/4)
 
   svg.append("line")
-    .attr("x1", w/2 + 100)
+    .attr("x1", w/2 + 250)
+    .attr("x2", w/2 + 250)
     .attr("y1", 0)
     .attr("y2", h/2)
 
