--- a/index.html
+++ b/index.html
@@ -109,8 +109,7 @@
     .attr("y", 0)
     .attr("width", w/2)
     .attr("height", h/2)
-    .attr("fill", "lightskyblue")
-    .attr("stroke-width", 0)
+    .attr("fill", "lightblue")
     
   svg.append("line")
     .attr("x1", w/2)
@@ -119,8 +118,8 @@
     .attr("y2", h/4)
 
   svg.append("line")
-    .attr("x1", w/2 + 250)
-    .attr("x2", w/2 + 250)
+    .attr("x1", w/2 + 160)
+    .attr("x2", w/2 + 160)
     .attr("y1", 0)
     .attr("y2", h/2)
 
