--- a/index.html
+++ b/index.html
@@ -139,21 +139,49 @@
     .style("fill", "red")
 
   svg.append("circle")
-    .attr("cx", w/4 - 100)
+    .attr("cx", w/4 - 80)
     .attr("cy", h/2 + h/4)
     .attr("r", 50)
     .style("fill", "white")
     .style("stroke", "white")
 
   svg.append("circle")
-    .attr("cx", w/4 - 70)
+    .attr("cx", w/4 - 60)
     .attr("cy", h/2 + h/4)
-    .attr("r", 50)
+    .attr("r", 35)
     .style("fill", "red")
     .style("stroke", "red")
 
-  svg.append("symbol")
-    .attr("d", star)
-    .attr("fill", "purple")
+  d3.select("#star_svg")
+    .append("svg:polygon")
+    .attr("id", "star_1")
+    .attr("visibility", "visible")
+    .attr("points", CalculateStarPoints(w/4, h/2 + h/4, 5, 10, 5))
 
+
+
+function CalculateStarPoints(centerX, centerY, arms, outerRadius, innerRadius)
+{
+   var results = "";
+
+   var angle = Math.PI / arms;
+
+   for (var i = 0; i < 2 * arms; i++)
+   {
+      var r = (i & 1) == 0 ? outerRadius : innerRadius;
+      
+      var currX = centerX + Math.cos(i * angle) * r;
+      var currY = centerY + Math.sin(i * angle) * r;
+
+      if (i == 0)
+      {
+         results = currX + "," + currY;
+      }
+      else
+      {
+         results += ", " + currX + "," + currY;
+      }
+   }
+   return results;
+}
 </script>
