--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 <script>
   console.log(d3); // test if d3 is loaded
 
+  var angle = 0;
+
   var w = 960,
     h = 500,
     z = 20,
@@ -130,7 +132,6 @@
     .style("stroke-width", 2)
     .style("stroke", "black")
     .on("click", function(){
-      d3.select(this).style("fill", "magenta");
       console.log("Japan");
     })
 
@@ -141,6 +142,7 @@
     .style("fill", "red")
     .style("stroke", "red")
     .on("click", function(){
+      d3.select(this).style("fill", "magenta");
       console.log("Japan");
     })
     
@@ -211,6 +213,8 @@
     .style("fill", "white")
     .style("stroke-width", 0)
     .on("click", function(){
+      angle += 45;
+      d3.select(this).style("transform", "rotate(" + angle + "deg)");
       console.log("Turkey");
     })
 
