--- a/index.html
+++ b/index.html
@@ -87,12 +87,14 @@
   svg.append("polygon")
     .attr("points", points1)
     .on("click", function(){
+      d3.select(this).style("visiblitiy", "hidden");
       console.log("Israel")
     })
 
   svg.append("polygon")
     .attr("points", points2)
     .on("click", function(){
+      d3.select(this).style("visiblitiy", "hidden");
       console.log("Israel")
     })
 
@@ -100,6 +102,7 @@
     .attr("width", w/2)
     .attr("height", h/2)
     .on("click", function(){
+      d3.select(this).style("visiblitiy", "hidden");
       console.log("Israel")
     })
 
@@ -110,6 +113,7 @@
     .style("fill", "darkblue")
     .style("stroke-width", 0)
     .on("click", function(){
+      d3.select(this).style("visiblitiy", "hidden");
       console.log("Israel")
     })
 
@@ -120,6 +124,7 @@
     .style("fill", "darkblue")
     .style("stroke-width", 0)
     .on("click", function(){
+      d3.select(this).style("visiblitiy", "hidden");
       console.log("Israel")
     })
 
@@ -214,7 +219,7 @@
     .style("stroke-width", 0)
     .on("click", function(){
       angle += 45;
-      d3.select(this).style("transform", "rotate(" + angle + "deg)");
+      d3.select(this).style("transform", "rotate(" + angle + ")");
       console.log("Turkey");
     })
 
