--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <script>
   console.log(d3); // test if d3 is loaded
 
-  var colors = ["aquamarine", "sandybrown", "hotpink", "red"];
+  var colors = ["aquamarine", "sandybrown", "hotpink", "white"];
   var iterator = -1;
 
   var w = 960,
